--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,8 @@ link_directories("/home/lenovo/Info Project/2DEngine/SFML/SFML-2.5.1/lib")
 set(SFML_DIR "/home/lenovo/Info Project/2DEngine/SFML/SFML-2.5.1/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
-set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp)
+set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp)
 
 add_executable(${PROJECT_NAME} ${project_sources})
 
 target_link_libraries (${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
-
