--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,14 @@ link_directories("/home/lenovo/Info Project/2DEngine/SFML/SFML-2.5.1/lib")
 set(SFML_DIR "/home/lenovo/Info Project/2DEngine/SFML/SFML-2.5.1/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
+
+
 set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp gameobject.cpp)
 
-add_executable(${PROJECT_NAME} ${project_sources})
+FOREACH(SRC ${project_sources})
+    LIST(APPEND SRC2 "src/${SRC}")
+ENDFOREACH()
+
+add_executable(${PROJECT_NAME} ${SRC2})
 
 target_link_libraries (${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
