--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ add_executable(${PROJECT_NAME} ${sources})
 
 target_link_libraries (${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
 
-#Hello!
+#Hello!Hello!
