--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,19 @@ project(Hackertyper2_0)
 
 
 
-set(SFML_INCLUDE_DIR "SFML/SFML-2.5.1/include")
-set(SFML_LIBRARY_DIR "SFML/SFML-2.5.1/lib")
+set(SFML_INCLUDE_DIR "SFML/include")
+set(SFML_LIBRARY_DIR "SFML/lib")
 
-include_directories("SFML/SFML-2.5.1/include")
-link_directories("SFML/SFML-2.5.1/lib")
+include_directories("SFML/include")
+link_directories("SFML/lib")
 
-set(SFML_DIR "SFML/SFML-2.5.1/lib/cmake/SFML")
+set(SFML_DIR "SFML/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
 
 
-set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp gameobject.cpp)
+set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp gameobject.cpp
+    creatures.cpp)
 
 
 
