--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
 
 set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp gameobject.cpp
-     textobject.cpp renderer.cpp)
+     textobject.cpp renderer.cpp picture.cpp)
 
 
 
