--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,30 +3,34 @@ cmake_minimum_required(VERSION 2.8)
 project(Hackertyper2_0)
 
 
+set(SFML_INCLUDE_DIR "SFML/include")
+set(SFML_LIBRARY_DIR "SFML/lib")
 
-set(SFML_INCLUDE_DIR "SFML/SFML-2.5.1/include")
-set(SFML_LIBRARY_DIR "SFML/SFML-2.5.1/lib")
+include_directories("SFML/include")
+link_directories("SFML/lib")
 
-include_directories("SFML/SFML-2.5.1/include")
-link_directories("SFML/SFML-2.5.1/lib")
-
-set(SFML_DIR "SFML/SFML-2.5.1/lib/cmake/SFML")
+set(SFML_DIR "SFML/lib/cmake/SFML")
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
 
-set(project_sources main.cpp drawmanager.cpp eventmanager.cpp eventhandler.cpp application.cpp datastorage.cpp gameobject.cpp creature.cpp)
+
+
+set(project_sources src/main.cpp
+                    src/core/application.cpp
+                    src/core/handlers/eventhandler.cpp
+                    src/core/management/eventmanager.cpp
+                    src/core/management/drawmanager.cpp
+                    src/core/objects/gameobject.cpp
+                    src/core/objects/renderer.cpp
+                    src/core/objects/picture.cpp
+                    src/core/objects/textobject.cpp
+                    src/core/storage/datastorage.cpp)
 
 
 
-
-
-
-FOREACH(SRC ${project_sources})
-    LIST(APPEND sources "src/${SRC}")
-ENDFOREACH()
-
-add_executable(${PROJECT_NAME} ${sources})
+add_executable(${PROJECT_NAME} ${project_sources})
 
 target_link_libraries (${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
 
 #Hello!Hello!Hello!
+
